--- a/front-end/src/app/components/edit-empleado/edit-empleado.component.html
+++ b/front-end/src/app/components/edit-empleado/edit-empleado.component.html
@@ -1,7 +1,9 @@
-<div class="row mt-3">
+<app-progress-bar *ngIf="loading"></app-progress-bar>
+
+<div  *ngIf="!loading" class="row mt-3">
     <div class=" col-lg-4 offset-lg-4">
         <div class="card text-white bg-secondary mb-3" style="max-width: 35rem;">
-            <div class="card-header text-center">Nuevo empleado</div>
+            <div class="card-header text-center">{{operacion}} empleado</div>
             <div class="card-body">
                
               <form [formGroup]="listaEmp" (ngSubmit)="addEmpleado()">
