--- a/front-end/src/app/components/navbar/navbar.component.html
+++ b/front-end/src/app/components/navbar/navbar.component.html
@@ -1,23 +1,24 @@
 <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
-    <div class="container-fluid">
+    <div class="container-fluid ">
       <a class="navbar-brand" href="#">ARPLADUL</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarColor01">
-        <ul class="navbar-nav me-auto">
-          <li class="nav-item">
+        <ul class="navbar-nav me-auto justify-content-center">
+          <li class="nav-item mx-auto">
             <a class="nav-link active" href="#">Home
               <span class="visually-hidden">(current)</span>
             </a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item mx-auto">
             <a class="nav-link" href="#">Features</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item mx-auto">
             <a class="nav-link" href="#">Pricing</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item mx-auto">
+            <li class="nav-item ">
             <a class="nav-link" href="#">About</a>
           </li>
           <li class="nav-item dropdown">
@@ -31,10 +32,7 @@
             </div>
           </li>
         </ul>
-        <form class="d-flex">
-          <input class="form-control me-sm-2" type="search" placeholder="Search">
-          <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-        </form>
+        
       </div>
     </div>
   </nav>
